plugins {
    id 'java'
}

group = 'com.si6gma'
version = rootProject.findProperty('mod_version') ?: '1.0.0'

repositories {
    maven { url = 'https://repo.papermc.io/repository/maven-public/' }
}

dependencies {
    compileOnly "io.papermc.paper:paper-api:26.1.2.build.69-stable"
    testImplementation "org.junit.jupiter:junit-jupiter:5.10.2"
    testRuntimeOnly "org.junit.platform:junit-platform-launcher"
}

test {
    useJUnitPlatform()
}

processResources {
    def props = [version: version]
    inputs.properties props
    filesMatching('plugin.yml') { expand props }
}

tasks.withType(JavaCompile).configureEach {
    it.options.release = 25
}

java {
    sourceCompatibility = JavaVersion.VERSION_25
    targetCompatibility = JavaVersion.VERSION_25
}

jar {
    archiveBaseName = 'slipstream-paper'
}
